[package]
name = "glogg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
inline_colorization = "0.1.6"
parse_datetime = "0.6.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "io-util", "process", "macros"] }
tokio-stream = { version = "0.1.16", features = ["io-util"] }
